<?xml version="1.0"?>
<package format="2">
  <name>autolabor_auto_control</name>
  <version>0.0.0</version>
  <description>The autolabor_auto_control package</description>

  <maintainer email="zzzz_zyp@whu.edu.cn">ZhaoYipeng</maintainer>

  <license>MIT</license>

  <author >ZhaoYipeng</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
